[package]
name = "VellumEngine"
version = "0.1.0"
edition = "2021" # Use the latest valid edition

[dependencies]
wgpu = "27.0.1" # Updated to match code requirements
winit = { version = "0.30.12", features = ["x11", "wayland"] } # Linux backends
glam = "0.30.8" # For future vector math
pollster = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive"] } # For Vertex struct
env_logger = "0.11.8" # For logging
log = "0.4.28" # For logging